# FIFTH

./: .gitignore  CMakeLists.txt  README.md  base.h  dynamic_string.c  dynamic_string.h  fileUtils.c  fileUtils.h  lexer.c  lexer.h  main.c  program_stack.c  program_stack.h  vm.c  vm.h  words.c
src/: CMakeLists.txt  base.h  call_stack.c  call_stack.h  dynamic_string.c  dynamic_string.h  fifth.c  file_utils.c  file_utils.h  lexer.c  lexer.h  program_stack.c  program_stack.h  runtime_impl.h  vm.c  vm.h  words.c  words.h
src/stdlib/: math.c  std_words.c
stdlib/: math.h  std_words.c  std_words.h
test/: CMakeLists.txt  test.c  test.h  test_dynamic_string.c  test_dynamic_string.h  test_impl.h
